# api/src/main/java/no/freshify/api/controller/HouseholdRecipeController.java
@@ -2,6 +2,7 @@ package no.freshify.api.controller;
 
 import lombok.RequiredArgsConstructor;
 import no.freshify.api.exception.HouseholdNotFoundException;
+import no.freshify.api.exception.HouseholdRecipeNotFoundException;
 import no.freshify.api.exception.RecipeNotFoundException;
 import no.freshify.api.model.Household;
 import no.freshify.api.model.dto.HouseholdRecipeDTO;
@@ -62,15 +63,33 @@ public class HouseholdRecipeController {
      * Gets all bookmarked recipes in a household
      * @param householdId The id of the household
      * @return A list of all bookmarked recipes in the household
+     * @throws HouseholdNotFoundException If the household is not found
      */
     @PreAuthorize("hasPermission(#householdId, 'Household', '')")
     @GetMapping("/recipe")
-    public ResponseEntity<List<HouseholdRecipeDTO>> getHouseholdRecipes(@PathVariable("householdId") Long householdId) {
+    public ResponseEntity<List<HouseholdRecipeDTO>> getHouseholdRecipes(@PathVariable("householdId") Long householdId) throws HouseholdNotFoundException {
         logger.info("Getting all bookmarked recipes in household");
 
         List<HouseholdRecipe> recipes = householdRecipeService.getRecipes(householdId);
         List<HouseholdRecipeDTO> recipeDTOS = householdRecipeMapper.toHouseholdRecipeDTOs(recipes);
 
         return ResponseEntity.ok(recipeDTOS);
+    }
+
+    /**
+     * Removes a household recipe / bookmarked recipe in a household
+     * @param householdId The id of the household
+     * @param id The id of the recipe
+     * @return NO_CONTENT if the household recipe was removed
+     * @throws HouseholdRecipeNotFoundException If the household recipe is not found
+     */
+    @PreAuthorize("hasPermission(#householdId, 'Household', 'SUPERUSER')")
+    @DeleteMapping("/recipe/{id}")
+    public ResponseEntity<HttpStatus> removeHouseholdRecipe(@PathVariable("householdId") Long householdId,
+                                                            @PathVariable("id") Long id) throws HouseholdRecipeNotFoundException {
+        logger.info("Removing household recipe / bookmarked recipe in household");
+
+        householdRecipeService.removeHouseholdRecipe(householdId, id);
+        return ResponseEntity.noContent().build();
     }
 }
